# niconico-discord

./: LICENSE.md  README.md  generate_executable_server.ps  generate_executable_server.sh  pyproject.toml  server.py
.github/: dependabot.yml
browser_addon/: content_script.js  manifest.json
modules/: discord.py  httpserver.py  savedata.py  schemas.py
